<resources>
    <string name="app_name">WanAndroid</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">设置</string>
    <string name="collection">收藏</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="wxarticle">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>
    <string name="collect">收藏</string>
    <string name="history">历史记录</string>
    <string name="hot_word">热词</string>
    <string name="search_more">搜索更多干货</string>
    <string name="common_website">常用网站</string>
    <string name="clear_all_history">清除所有历史</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="to_login">去登录 ></string>
    <string name="logout">退出登录</string>
    <string name="loading">加载中…</string>
    <string name="error">发生未知错误…</string>
    <string name="open_with_browser">浏览器打开</string>
    <string name="night_mode">夜间模式</string>
    <string name="no_image_mode">无图模式</string>
    <string name="auto_cache">自动缓存</string>
    <string name="general">通用</string>
    <string name="others">其它</string>
    <string name="feedback">意见反馈</string>
    <string name="email_client">邮件客户端</string>
    <string name="login_title">WanAndroid 客户端登录</string>
    <string name="login_success">登录成功</string>
    <string name="register_title">WanAndroid 注册</string>
    <string name="exit_success">退出成功</string>
    <string name="exit_fail">退出失败</string>
    <string name="no_data">没有数据喔…</string>
    <string name="net_error">网络开小差了…</string>
    <string name="to_load">去加载</string>
    <string name="opening_in_browser">正在使用浏览器打开</string>
    <string name="my_collection">我的收藏</string>
    <string name="confirm_quit">确认退出此账号？</string>
    <string name="clear">清空</string>
    <string name="coin_rank">积分排行榜</string>
    <string name="wanandroid">玩安卓</string>
    <string name="my_coin">当前积分</string>
    <string name="rank">当前排名</string>
    <string name="lv">当前等级</string>
    <string name="square">广场</string>
    <string name="fresh">新</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="coin_rule">积分规则</string>
    <string name="welfare">福利</string>
    <string name="not_login">未登录</string>
    <string name="share">分享</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="title">标题</string>
    <string name="link">链接</string>
    <string name="not_login_and_to_login">未登录，请先登录</string>
    <string name="collect_website">收藏网站</string>
    <string name="collect_outside_article">收藏站外文章</string>
    <string name="author">作者</string>
    <string name="name">名称</string>
    <string name="edit_success">编辑成功</string>
    <string name="edit_fail">编辑失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="edit_website">编辑网站</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="delete">删除</string>
    <string name="register_success">注册成功</string>
    <string name="todo">待办</string>
    <string name="edit">编辑</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="skip">跳过</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="article">文章</string>
    <string name="website">网站</string>
    <string name="my_square">我的广场</string>

</resources>
