<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_wanandroid"
            android:checked="true"
            android:icon="@drawable/ic_wanandroid"
            android:title="@string/wanandroid"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_collection"
            android:icon="@drawable/ic_dislike"
            android:title="@string/collection"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_square"
            android:icon="@drawable/ic_square"
            android:title="@string/square"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_coin_rank"
            android:icon="@drawable/ic_coin"
            android:title="@string/coin_rank"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:visible="false"
            app:showAsAction="never" />

    </group>

</menu>
