<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_35"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_120"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:drawableStart="@drawable/ic_login"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/username" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="bottom"
                android:background="@color/light_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="bottom"
                android:background="@color/light_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="bottom"
                android:background="@color/light_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_25"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_login_button"
                android:text="@string/to_login"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_register_button"
                android:text="@string/register"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>